# transfer-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: codec.rs  errors.rs  handler.rs  main.rs  sanitize.rs  server.rs  ssl.rs  storage.rs
src-web/: index.html
src-web/css/: app.css
src-web/js/: app.js
