[package]
name = "transfer-rs"
version = "0.1.0"
authors = ["mschorsch <schorschmatthias@googlemail.com>"]

[dependencies]
clap = "2.9.3"
rand = "0.3.14"
quick-error = "1.1.0"
mime_guess = "1.8.0"
log = "0.3.6"
log4rs = "0.4.8"
regex = "0.1.73"
lazy_static = "0.2.1"
hyper = "0.9.10"
num_cpus = "0.2"
router = "0.2.0"
url = "1.2.0"

[dependencies.openssl]
version = "0.7"

[dependencies.iron]
version = "0.4.0"
features = ["ssl"]

[dependencies.multipart]
version = "0.7.0"
features = ["server"]
default_features = false